tests/interpreter/if-statement-test-expr-not-boolean.stderr
error: expected 'Bool', got 'Number'
 --> $DIR/if-statement-test-expr-not-boolean.lox:1:4
  |
1 | if 1 {
  |    ^
