tests/interpreter/if-statement-test-expr-not-boolean.lox
if 1 {
    y;
}
